resource/kompose-elk/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
    io.kompose.service: kibana
  strategy: {}
  template:
    metadata:
    labels:
        io.kompose.network/hobbit-services: "true"
        io.kompose.service: kibana
    spec:
    containers:
    - env:
        - name: ELASTICSEARCH_PASSWORD
        value: changeme
        - name: ELASTICSEARCH_URL
        value: http://elasticsearch:9200
        - name: ELASTICSEARCH_USERNAME
        value: elastic
        - name: SERVER_NAME
        value: kibana
        - name: XPACK_MONITORING_ENABLED
        value: "false"
        - name: XPACK_SECURITY_ENABLED
        value: "false"
        image: docker.elastic.co/kibana/kibana:5.2.2
        imagePullPolicy: ""
        name: kibana
        ports:
        - containerPort: 5601
        resources: {}
    restartPolicy: Always
    serviceAccountName: ""
    volumes: null
status: {}
