resource/kompose-elk/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  ports:
  - name: "5601"
    port: 5601
    targetPort: 5601
  selector:
    io.kompose.service: kibana
status:
  loadBalancer: {}
