resource/kompose-elk/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-elk.yml convert --volumes hostPath
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  ports:
  - name: "12201"
    port: 12201
    targetPort: 12201
  - name: 12201-udp
    port: 12201
    protocol: UDP
    targetPort: 12201
  selector:
    io.kompose.service: logstash
status:
  loadBalancer: {}
