resource/kompose-elk/hobbit-core-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: hobbit-core
spec:
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.16.101.0/24
    - podSelector:
        matchLabels:
        io.kompose.network/hobbit-core: "true"
  podSelector:
    matchLabels:
    io.kompose.network/hobbit-core: "true"
