resource/kompose-elk/hobbit-services-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: hobbit-services
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
        io.kompose.network/hobbit-services: "true"
  podSelector:
    matchLabels:
    io.kompose.network/hobbit-services: "true"
